# claudecode-config

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN-auto-social-ops.md  README.md  settings.json
concurshield/eval/: __init__.py  dataset.py  experiment.py  metrics.py  models.py  report.py  run_eval.py  runner.py  slicing.py
docs/: 05-anti-fraud-techstack.md  06-nicolas-lin-perspective.md  08-agent-architecture-interview-guide.md  08-financial-wellness-assistant.md  09-ai-antifraud-project-plan.md  demo-report.html
fin-wellness/: .env.example  ARCHITECTURE.md  requirements.txt
fin-wellness/app/: config.py  db.py  main.py  models.py  orchestrator.py
fin-wellness/migrations/: 001_local_schema.sql
openclaw-v1.1/: .env.example  README.md  requirements.txt
openclaw-v1.1/app/: audit.py  concur.py  config.py  db.py  feedback.py  learner.py  main.py  models.py  notify.py  ocr.py  rules.py
openclaw-v1.1/docs/: v1.1-hitl-product-spec.md
openclaw-v1.1/migrations/: 001_init_schema.sql
projects/-Users-ashleychen/: ai-enterprise-adoption-research.md
projects/ai-fraud-investigator/: .gitignore  (+2 more)
social-ops-crew/: .env.example  pyproject.toml
social-ops-crew/src/: main.py  runner.py
social-ops-crew/src/agents/: definitions.py
social-ops-crew/src/config/: __init__.py  agents.yaml  persona.yaml  strategy.yaml  tasks.yaml  watchlist.yaml
social-ops-crew/src/flows/: crews.py  daily_flow.py  scheduler.py
social-ops-crew/src/tasks/: definitions.py
social-ops-crew/src/tools/: data_tool.py  linkedin_tool.py  notification_tool.py  search_tool.py  x_tool.py
(+62 files in other folders)
