[project]
name = "social-ops-crew"
version = "0.1.0"
description = "Multi-agent social media automation system built on CrewAI"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.80.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
