[project]
name = "social-ops-crew"
version = "0.2.0"
description = "Multi-agent social media automation using Claude API + tool use"
requires-python = ">=3.11,<3.14"
dependencies = [
    "anthropic>=0.52",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "schedule>=1.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
